--- a/service.html
+++ b/service.html
@@ -30,13 +30,13 @@
 				<div class="menu-trigger">MENU</div>
 				<nav class="menu-bar">
 					<ul>
-						<li class="menu-btn"><a href="index.html">STRONA GŁÓWNA</a></li>
-						<li class="menu-btn"><a href="history.html">HISTORIA</a></li>
-						<li class="menu-btn"><a href="service.html">USŁUGI</a></li>
-						<li class="menu-btn"><a href="stock.html">TABOR</a></li>
-						<li class="menu-btn"><a href="contact.html">KONTAKT</a></li>
-						<!-- <li class="menu-btn"><a href="work.html">OFERTY PRACY</a></li> -->
-						<li class="menu-btn"><a href="camper.html">KAMPER</a></li>
+						<a href="index.html"><li class="menu-btn">STRONA GŁÓWNA</li></a>
+						<a href="history.html"><li class="menu-btn">HISTORIA</li></a>
+						<a href="service.html"><li class="menu-btn">USŁUGI</li></a>
+						<a href="stock.html"><li class="menu-btn">TABOR</li></a>
+						<a href="contact.html"><li class="menu-btn">KONTAKT</li></a>
+						<!-- <a href="work.html"><li class="menu-btn">OFERTY PRACY</li></a> -->
+						<a href="camper.html"><li class="menu-btn">KAMPER</li></a>
 					</ul>
 				</nav>
 			</div>
@@ -54,7 +54,7 @@
 				<p> transportujemy transportem ciężarowym oraz dostawczym (dostawczymi dla mniejszych zleceń, ciężarowymi na centralne magazyny)</p> 
 				<p>transportujemy sadzonki od ogrodników z Polski do Danii</p>
 				<p>obsługujemy kompleksowo cały przebieg transportu</p>
-				<iframe id="area" src="https://www.google.com/maps/d/embed?mid=1c7_aZhR04tM6Xby5DiQ37iEJnSI" width="100%" height="480"></iframe>
+				<iframe id="area" src="https://www.google.com/maps/d/embed?mid=1c7_aZhR04tM6Xby5DiQ37iEJnSI" width="80%" height="480"></iframe>
 				<h2>Obecnie naszym głównym celem jest Dania, Holandia, Niemcy, Czechy, Słowacja. Wykonujemy usługi transportowe również na terenie naszego kraju.</h2>
 				<div class="doc-buttons">
 					<a href="contact.html"><div class="doc-btn" style="font-size: 1.2em; background-color: #fff;">Kontakt</div></a>
