--- a/stock_en.html
+++ b/stock_en.html
@@ -30,13 +30,13 @@
 				<div class="menu-trigger">MENU</div>
 				<nav class="menu-bar">
 					<ul>
-						<li class="menu-btn"><a href="index_en.html">MAIN PAGE</a></li>
-						<li class="menu-btn"><a href="history_en.html">HISTORY</a></li>
-						<li class="menu-btn"><a href="service_en.html">SERVICE</a></li>
-						<li class="menu-btn"><a href="stock_en.html">STOCK</a></li>
-						<li class="menu-btn"><a href="contact_en.html">CONTACT</a></li>
-						<!-- <li class="menu-btn"><a href="work.html">JOB OFFERS</a></li> -->
-						<li class="menu-btn"><a href="camper_en.html">CAMPER</a></li>
+						<a href="index_en.html"><li class="menu-btn">MAIN PAGE</li></a>
+						<a href="history_en.html"><li class="menu-btn">HISTORY</li></a>
+						<a href="service_en.html"><li class="menu-btn">SERVICE</li></a>
+						<a href="stock_en.html"><li class="menu-btn">STOCK</li></a>
+						<a href="contact_en.html"><li class="menu-btn">CONTACT</li></a>
+						<a href="work.html"><!-- <li class="menu-btn">JOB OFFERS</li></a> -->
+						<a href="camper_en.html"><li class="menu-btn">CAMPER</li></a>
 					</ul>
 				</nav>
 			</div>
@@ -55,7 +55,7 @@
 				<h2>Volvo trucks</h2>
 				<h2>Isothermal semi-trailers with and aggregate (big enough to carry 43 CC trolleys)</h2>
 				<h2>delivery vans (Renault, Iveco)</h2>
-				<h2>Volvo tandem 48m long (26m of auto i 22m of truck trailer)</h2>
+				<h2>Volvo tandem for 48 trolleys (26 in auto and 22 in truck trailer)</h2>
 				<br><h2>We also offer a camper to rent. If you are intrested read more in Polish language version:</h2>
 				<div class="doc-buttons">
 					<a href="camper.html"><div class="doc-btn" style="font-size: 1.2em; background-color: #fff;">Camper</div></a>
