--- a/contact_en.html
+++ b/contact_en.html
@@ -30,13 +30,13 @@
 				<div class="menu-trigger">MENU</div>
 				<nav class="menu-bar">
 					<ul>
-						<li class="menu-btn"><a href="index_en.html">MAIN PAGE</a></li>
-						<li class="menu-btn"><a href="history_en.html">HISTORY</a></li>
-						<li class="menu-btn"><a href="service_en.html">SERVICE</a></li>
-						<li class="menu-btn"><a href="stock_en.html">STOCK</a></li>
-						<li class="menu-btn"><a href="contact_en.html">CONTACT</a></li>
-						<!-- <li class="menu-btn"><a href="work.html">JOB OFFERS</a></li> -->
-						<li class="menu-btn"><a href="camper_en.html">CAMPER</a></li>
+						<a href="index_en.html"><li class="menu-btn">MAIN PAGE</li></a>
+						<a href="history_en.html"><li class="menu-btn">HISTORY</li></a>
+						<a href="service_en.html"><li class="menu-btn">SERVICE</li></a>
+						<a href="stock_en.html"><li class="menu-btn">STOCK</li></a>
+						<a href="contact_en.html"><li class="menu-btn">CONTACT</li></a>
+						<a href="work.html"><!-- <li class="menu-btn">JOB OFFERS</li></a> -->
+						<a href="camper_en.html"><li class="menu-btn">CAMPER</li></a>
 					</ul>
 				</nav>
 			</div>
