--- a/stock.html
+++ b/stock.html
@@ -30,13 +30,13 @@
 				<div class="menu-trigger">MENU</div>
 				<nav class="menu-bar">
 					<ul>
-						<li class="menu-btn"><a href="index.html">STRONA GŁÓWNA</a></li>
-						<li class="menu-btn"><a href="history.html">HISTORIA</a></li>
-						<li class="menu-btn"><a href="service.html">USŁUGI</a></li>
-						<li class="menu-btn"><a href="stock.html">TABOR</a></li>
-						<li class="menu-btn"><a href="contact.html">KONTAKT</a></li>
-						<!-- <li class="menu-btn"><a href="work.html">OFERTY PRACY</a></li> -->
-						<li class="menu-btn"><a href="camper.html">KAMPER</a></li>
+						<a href="index.html"><li class="menu-btn">STRONA GŁÓWNA</li></a>
+						<a href="history.html"><li class="menu-btn">HISTORIA</li></a>
+						<a href="service.html"><li class="menu-btn">USŁUGI</li></a>
+						<a href="stock.html"><li class="menu-btn">TABOR</li></a>
+						<a href="contact.html"><li class="menu-btn">KONTAKT</li></a>
+						<!-- <a href="work.html"><li class="menu-btn">OFERTY PRACY</li></a> -->
+						<a href="camper.html"><li class="menu-btn">KAMPER</li></a>
 					</ul>
 				</nav>
 			</div>
@@ -55,7 +55,7 @@
 				<h2>ciągniki Volvo</h2>
 				<h2>naczepy izotermiczne z agregatem, które mieszczą 43 wózki kwiatowe</h2>
 				<h2>busy (Renault, Iveco)</h2>
-				<h2>tandem Volvo który ma 48m (26m auto i 22m przyczepa)</h2>
+				<h2>tandem Volvo mieszczący 48 wózków kwiatowych (26 auto i 22 przyczepa)</h2>
 				<br><h2>Dysponujemy również kamperem, zachęcamy do zapoznania się z ofertą:</h2>
 				<div class="doc-buttons">
 					<a href="camper.html"><div class="doc-btn" style="font-size: 1.2em; background-color: #fff;">Kamper - wynajem</div></a>
